--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>my third repo</title>
 </head>
 <body>
+     <h1>I can push to a github</h1>
+     <h3>Mama i can code now</h3>
+     <h3>New code changed</h3>
   
 </body>
 </html>
