--- a/index.html
+++ b/index.html
@@ -7,10 +7,52 @@
   <title>my third repo</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-     <h1>I can push to a github</h1>
-     <h3>Mama i can code now</h3>
-     <h3>New code changed</h3>
+<body> 
+      <h1>Welcome my Website</h1>
+      <div>
+     <img src="images/Untitled-2.jpg" alt="">
+     <p>Hello everbody , I am RAHMAN MD MOKSHEDUR. I born in  1ST January 1998  in Thakurgaon, Bangladesh. My father name is Md khademul Islam. My Mother name is Monowara Begum. We are four Brothers  and Sisters. Now I am student of Yunnan Technology and business university(YTBU). My Major is Computer Science and Technology. I am A web-developer and Java Develpoer. I lives in Kunming, Yunnan, China. .</p>
+     
+    </div><hr><br>
+    <h1> My Hometown Introduction</h1>
+    <div >
+        <img  src="images/abc.jpg" alt="">
+        <p>Introduction
+          Thakurgaon (ঠাকুরগাঁও জেলা, Thakurgaon Jela also Thakurgaon Zila) is a district in the north-western side of Bangladesh. It is a part of the Rangpur Division and borders India to the west.
+          Other Districts in Rangpur Division: Dinajpur | Gaibandha | Kurigram | Lalmonirhat | Nilphamari | Panchagarh | Rangpur | Thakurgaon
+          Area
+          1781.74 square kilometers (687.93 square miles).
+          Population
+          1390042
+          Bounded by
+          Panchagarh district on the north, west bengal of India on the west and south, Panchagarh and Dinajpur districts on the east
+          Profile
+          Thakurgaon subdivision was established in 1860 and was turned into a district in 1984. The district consists of 2 municipalities, 18 wards, 32 mahallas, 5 upazilas, 51 union parishads, 643 mouzas and 643 villages.
+          Upazilas
+          Baliadangi Upazila, Haripur Upazila, Pirganj Upazila, Ranisankail Upazila, Thakurgaon Sadar Upazila
+          Economy
+          In Bangladesh as a whole agriculture is the basis of the economy, and Thakurgaon has been striving for a long time to be economically productive, agriculture forming a major part of the districts economy. Thakurgaon produces many agricultural products, such as rice, wheat, sugarcane, seasonal vegetables and fruits etc. The sugarcane plantation - TSM (Thakurgaon Sugar Mill)--is part of the BSFIC. These become the main livelihood of the native. Poultry firms are quite productive business in Thakurgaon, there are several cold-stores in the district. Different businesses for producing and repairing agricultural tools have grown up.
+          Archeological Sites
+          Residence of Raja Tonkanath (Malduar), Rajbari of Raja Jagendra Narayan, Rajbari of Raja Ganesh, Jagadal Rajbari, Bangla Garh, Sangaon Shahi Mosque, Fatehpur Mosque, Jamalpur Mosque, tomb of Syed Nasir Uddin, tomb of Pir Sheikh Sirajuddin, tomb of Hazrat Adam (R), Govinda Jeo Mandir (eighteenth century), Shiva Mandir at Haripur Rajbari, Goraksanath Mandir, Katihar Hat Shyamrai Mandir, Ramrai Dighi, Khunia Dighi, Adhar Dighi, Shapla Dighi and Rani Dighi.
+          Newspapers
+          Extinct dailies: Thakurgaon Darpan, Sangrami Bangla, Gram Bangla, Dainik Bangladesh, Janarab; periodicals: Aso Cheye Dekhi Prithibi, Usashi, Chalachitra.
+          Rivers
+          tangon, punarbhaba, nagar, Pathari, Talma, Kulic, dhepa.
+          Official Website
+          <a href=" http://www.thakurgaon.gov.bd"> Official Website</a>
+          </p>
+          <h2>Contact</h2>
+          <div>
+            <ul>
+              <li><a href="www.gmail.com"> momim20192020@gmail.com</a></li>
+              <li><a href="">Mobile number: +8615198958673(imo number, whatsapp number)</a></li>
+              <li><a href="">Bangladeshi Number : +8801773245978(imo number)</a></li>
+              <li><a href="">Facebook</a></li>
+              <li><a href="">Youtube</a></li>
+            </ul>
+            <p> </p>
+          </div>
+    </div>
   
 </body>
 </html>
